Fixed Sponsors Image on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -234,7 +234,7 @@ body {
 }
 
 .marquee-effect-container {
-  @apply py-8 pl-20 flex flex-row animate-marquee whitespace-nowrap gap-8;
+  @apply py-4 pl-20 flex flex-row animate-marquee whitespace-nowrap gap-8;
 }
 
 /* --------- NAVIGATION  --------- */
